--- a/build.xml
+++ b/build.xml
@@ -55,7 +55,7 @@
 		<copy file="${build.lib.dir}/guice-3.0/guice-assistedinject-3.0.jar" todir="${JAVA_HOME}/jre/lib/ext" />
 		<copy file="${build.lib.dir}/guice-3.0/javax.inject.jar" todir="${JAVA_HOME}/jre/lib/ext" />
 		-->
-        <javadoc access="protected" author="true" destdir="${docs.dir}/apidoc" doctitle="Beetle J2EE Application Framework 2.2.4"
+        <javadoc access="protected" author="true" destdir="${docs.dir}/apidoc" doctitle="Beetle J2EE Application Framework 3.0.2"
                  encoding="UTF-8" nodeprecated="false" nodeprecatedlist="false" noindex="false" nonavbar="false"
                  notree="false" source="1.6" sourcepath="${build.main.src.dir}" splitindex="false" use="false" version="true"/>
 		<!--
@@ -176,7 +176,7 @@
 		<delete dir="${basedir}/output/WebConsole" />
     </target>
 	<!--genJar-->
-    <target depends="archive" name="genJar"/>
-	<target depends="genJar,javadoc" name="genAll"/>
+    <target depends="archive" name="genBeetleAllJar"/>
+	<target depends="genBeetleAllJar,javadoc" name="genAll"/>
  </project>
 
